--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,9 @@ name: WakaTime status update
 on:
   schedule:
     # Runs at 12 am  '0 0 * * *'  UTC
-    - cron: "1 0 * * *"
-
+    - cron: "0 */1 * * *"
+  push:
+    branches: [main]
 jobs:
   update-readme:
     name: Update the WakaTime Stat
